logs/Slang/generated/hdlconv/hdlconvertor_p794.sv.log
name: hdlconvertor_p794
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p794.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p794.sv:14:9: error: unknown module 'sms_08b216t0'
        sms_08b216t0 p(.clk(clk), .csb(csx), .cke(cke),.ba(ba),
        ^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p794.sv:20:9: error: language feature not yet supported
        input [31:0] address;
        ^~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p794.sv:21:9: error: language feature not yet supported
        output [63:0] data;
        ^~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p794.sv:24:11: error: use of undeclared identifier 'word'
          word[3].p.read_mem(address, data[63:48]);
          ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p794.sv:25:11: error: use of undeclared identifier 'word'
          word[2].p.read_mem(address, data[47:32]);
          ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p794.sv:26:11: error: use of undeclared identifier 'word'
          word[1].p.read_mem(address, data[31:16]);
          ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p794.sv:27:11: error: use of undeclared identifier 'word'
          word[0].p.read_mem(address, data[15: 0]);
          ^~~~
